src/test/ui/where-clauses/where-for-self.stderr
error[E0316]: nested quantification of lifetimes
  --> $DIR/where-for-self.rs:17:26
   |
LL |     where for<'a> &'a T: for<'b> Bar<'b>
   |                          ^^^^^^^^^^^^^^^

error: aborting due to previous error

